--- a/projects/todo-typescript/package.json
+++ b/projects/todo-typescript/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "eslint": "eslint src/**/*.ts",
-    "eslint:fix": "eslint src/** --fix",
+    "eslint:fix": "eslint src/**/*.ts --fix",
     "prettify": "prettier --write src/**/*.ts",
     "prettify:check": "prettier --check src/**/*.ts",
     "stylelint": "stylelint 'src/**/*.scss'",
