--- a/projects/todo-typescript/package.json
+++ b/projects/todo-typescript/package.json
@@ -12,13 +12,15 @@
     "prettify": "prettier --write src/**/*.ts",
     "prettify:check": "prettier --check src/**/*.ts",
     "stylelint": "stylelint 'src/**/*.scss'",
-    "stylelint:fix": "stylelint 'src/**/*.scss' --fix"
+    "stylelint:fix": "stylelint 'src/**/*.scss' --fix",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "gh-pages": "^6.1.0",
     "prettier": "3.1.1",
     "stylelint": "^16.0.2",
     "stylelint-config-standard": "^35.0.0",
