fix search error and add config file for vite

--- a/projects/todo-typescript/.eslintrc.json
+++ b/projects/todo-typescript/.eslintrc.json
@@ -15,9 +15,9 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"],
+    "quotes": [2, "single", { "avoidEscape": true }],
     "semi": ["error", "always"]
   }
 }
