--- a/projects/todo-backend/package.json
+++ b/projects/todo-backend/package.json
@@ -20,9 +20,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/http-status-codes": "^1.2.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
