--- a/projects/todo-backend/package.json
+++ b/projects/todo-backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "@types/winston": "^2.4.4",
