--- a/projects/todo-backend/package.json
+++ b/projects/todo-backend/package.json
@@ -10,7 +10,8 @@
     "migrate": "npm run knex migrate:latest --verbose",
     "rollback": "npm run knex migrate:rollback --verbose",
     "seed": "npm run knex seed:run --verbose",
-    "make:seeder": "npm run knex seed:make -x ts --env development"
+    "make:seeder": "npm run knex seed:make --env development -- $npm_config_argv"
+
   },
   "keywords": [],
   "author": "",
