--- a/projects/final-poject/backend/package.json
+++ b/projects/final-poject/backend/package.json
@@ -9,8 +9,8 @@
     "eslint:fix": "eslint . --ext .ts --fix",
     "prettify": "prettier --write src/**/*.ts",
     "prettify:check": "prettier --check src/**/*.ts",
-    "migration:create": "npx typeorm migration:create ./src/migration/",
-    "migration:generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate ./src/migration/$name -d ./src/data-source.ts"
+    "migration:create": "npx typeorm migration:create ./src/database/migration/",
+    "migration:generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate ./src/database/migration/$name -d ./src/data-source.ts"
   },
   "author": "",
   "license": "ISC",
@@ -28,8 +28,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
