--- a/projects/final-poject/backend/package.json
+++ b/projects/final-poject/backend/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.10.6",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
@@ -28,6 +30,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
