--- a/projects/final-poject/backend/package.json
+++ b/projects/final-poject/backend/package.json
@@ -10,7 +10,7 @@
     "prettify": "prettier --write src/**/*.ts",
     "prettify:check": "prettier --check src/**/*.ts",
     "migration:create": "npx typeorm migration:create ./src/database/migration/",
-    "migration:generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate ./src/database/migration/$name -d ./src/data-source.ts"
+    "migration:generate": "npx ts-node ./node_modules/.bin/typeorm migration:generate ./src/database/migration/$name -d ./src/database/data-source.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
@@ -31,7 +32,6 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
